--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,8 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 add_executable(Duplicates main.cpp
+        gui/GuiConstants.h
         gui/MainWindow.cpp gui/MainWindow.h
         gui/DirectoryDialog.cpp gui/DirectoryDialog.h
-        gui/GuiConstants.h core/File.cpp core/File.h core/Visitor.cpp core/Visitor.h)
+        core/Visitor.cpp core/Visitor.h core/Stats.cpp core/Stats.h core/Log.h)
 target_link_libraries(Duplicates Qt5::Widgets)
